--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.44.7",
+    "@codemirror/lang-sql": "^6.8.0",
     "@vueuse/core": "^9.3.0",
     "axios": "^0.24.0",
+    "codemirror": "^6.0.1",
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "lodash": "^4.17.21",
@@ -42,6 +44,7 @@
     "query-string": "^8.0.3",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.40",
+    "vue-codemirror": "^6.1.1",
     "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.14"
